Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-190

Insert with NULL partition keys results in SIGSEGV.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 0.6
    • Impala 1.0
    • None
    • None

    Description

      The following query from Impala results in a SIGSEGV:

      insert overwrite table functional.alltypessmall partition(year, month)
      select id, bool_col, tinyint_col, smallint_col, int_col, bigint_col, float_col, double_col, date_string_col, string_col, timestamp_col,
      NULL as year, NULL as month from functional.alltypessmall limit 1;

      Impala log:

      1. A fatal error has been detected by the Java Runtime Environment:
        #
      2. SIGSEGV (0xb) at pc=0x0000000000b5f7be, pid=7423, tid=140470607456000
        #
      3. JRE version: 6.0_26-b03
      4. Java VM: Java HotSpot(TM) 64-Bit Server VM (20.1-b02 mixed mode linux-amd64 compressed oops)
      5. Problematic frame:
      6. C [impalad+0x75f7be] impala::RawValue::Eq(void const*, void const*, impala::PrimitiveType)+0x96

      Stack: [0x00007fc1dc98a000,0x00007fc1dca8b000], sp=0x00007fc1dca87d10, free space=1015k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      C [impalad+0x75f7be] impala::RawValue::Eq(void const*, void const*, impala::PrimitiveType)+0x96
      C [impalad+0x991f1c] impala::HdfsTableSink::Init(impala::RuntimeState*)+0x6c6
      C [impalad+0x84cef6] impala::PlanFragmentExecutor::Prepare(impala::TExecPlanFragmentParams const&)+0x12de
      C [impalad+0x7f8266] impala::Coordinator::Exec(impala::TUniqueId const&, impala::TQueryExecRequest*, impala::TQueryOptions const&)+0x5a0
      C [impalad+0x689ead] impala::ImpalaServer::QueryExecState::Exec(impala::TExecRequest*)+0x72d
      C [impalad+0x6989aa] impala::ImpalaServer::ExecuteInternal(impala::TClientRequest const&, boost::shared_ptr<impala::ImpalaServer::SessionState>, impala::TSessionState const&, bool*, boost::shared_ptr<impala::ImpalaServer::QueryExecState>*)+0x3ae
      C [impalad+0x698543] impala::ImpalaServer::Execute(impala::TClientRequest const&, boost::shared_ptr<impala::ImpalaServer::SessionState>, impala::TSessionState const&, boost::shared_ptr<impala::ImpalaServer::QueryExecState>*)+0x7d
      C [impalad+0x71b472] impala::ImpalaServer::query(beeswax::QueryHandle&, beeswax::Query const&)+0x338
      C [impalad+0x8c496a] beeswax::BeeswaxServiceProcessor::process_query(int, apache::thrift::protocol::TProtocol*, apache::thrift::protocol::TProtocol*, void*)+0x21c
      C [impalad+0x8c46a1] beeswax::BeeswaxServiceProcessor::dispatchCall(apache::thrift::protocol::TProtocol*, apache::thrift::protocol::TProtocol*, std::string const&, int, void*)+0x2b1
      C [impalad+0x8b27c7] impala::ImpalaServiceProcessor::dispatchCall(apache::thrift::protocol::TProtocol*, apache::thrift::protocol::TProtocol*, std::string const&, int, void*)+0x97
      C [impalad+0x6a5bbe] apache::thrift::TDispatchProcessor::process(boost::shared_ptr<apache::thrift::protocol::TProtocol>, boost::shared_ptr<apache::thrift::protocol::TProtocol>, void*)+0xce

      Attachments

        Activity

          People

            alex.behm Alexander Behm
            alex.behm Alexander Behm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: