IMPALA-190: Insert with NULL partition keys results in SIGSEGV.